--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
     "files.associations": {
         "Makefile.*": "makefile",
         "*.mk": "makefile",
-        "emcute.h": "c"
+        "emcute.h": "c",
+        "ztimer.h": "c"
     },
     "[shellscript][c][cpp]": {
         "editor.tabSize": 4,
