--- a/IoT_Project/Makefile
+++ b/IoT_Project/Makefile
@@ -2,7 +2,7 @@
 APPLICATION = MQTT_sender
 
 # If no BOARD is found in the environment, use this default:
-BOARD ?= native
+BOARD ?= iotlab-a8-m3
 
 # This has to be the absolute path to the RIOT base directory:
 RIOTBASE ?= $(CURDIR)/..
